# tap-mindstamp

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
tap_mindstamp/: client.py  streams.py  tap.py
tap_mindstamp/schemas/: interactions.json  videos.json  viewers.json  views.json
tap_mindstamp/tests/: __init__.py  test_core.py
